Fix overflow in user profile page

--- a/themes/Aurora/style.css
+++ b/themes/Aurora/style.css
@@ -1218,6 +1218,8 @@ input[type=file]::file-selector-button:hover {
     box-sizing: border-box;
     border: 1px solid var(--border-secondary);
     display: block;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 .userpost {
     margin: 4px 0px;
@@ -1227,6 +1229,7 @@ input[type=file]::file-selector-button:hover {
     box-sizing: border-box;
     border: 1px solid var(--border-secondary);
     word-wrap: break-word;
+    word-break: break-word;
     color: var(--text-heavy);
 }
 .userpostsh {
